--- a/templates/admin_panel/dashboard.html
+++ b/templates/admin_panel/dashboard.html
@@ -19,9 +19,11 @@
                     <li class="nav-item">
                         <a class="nav-link {% if active_page == 'dashboard' %}active{% endif %}" href="{% url 'admin_dashboard' %}">Dashboard</a>
                     </li>
+                    {% if user_role == 'superuser' or user_role == 'manager' %}
                     <li class="nav-item">
                         <a class="nav-link {% if active_page == 'ApplicationApprovals' %}active{% endif %}" href="{% url 'ApplicationApprovals' %}">Application Approvals</a>
                     </li>
+                    {% endif %}
                     <li class="nav-item">
                         <a class="nav-link {% if active_page == 'Applications' %}active{% endif %}" href="{% url 'Applications' %}">Applications</a>
                     </li>
